# rust-chatroom

./: .env  Cargo.toml  chatroom.db
assets/: style.css
database/: db-1.sql  db-2.sql
migrations/: 20231125175248_initial.sql  20231125215457_users.sql
src/: app.rs  auth.rs  database.rs  error.rs  main.rs  models.rs  pages.rs  templates.rs  user.rs
src/pages/: chatroom.rs  home.rs  login.rs  not_found.rs
templates/: base.html  chatbox.html  chatroom.html  create_room_dialog.html  home.html  index.html  login.html  message.html  not_found.html  room.html  room_card.html
