[package]
name = "chatroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "serde", "serde-json"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["macros", "headers"] }
axum-htmx = "0.4.0"
axum-login = "0.9.0"
password-auth = "1.0.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
